--- a/css/global.css
+++ b/css/global.css
@@ -25,7 +25,7 @@ div .wrapper {
     width: 100%;
     height: 100vh;
 
-    background-image: url('../public/images/home_background.svg');
+    background-image: url('/images/home_background.svg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
